chore: addressed a few warnings from IntelliJ